# 32blit-lua

./: .gitignore  CMakeLists.txt  assets.yml  luablitlib.cpp  luablitlib.hpp  main.cpp  main.lua  metadata.yml  setjmp.c
.github/workflows/: build.yml
examples/: input.lua  shapes.lua  snake.lua  sprite-test.lua  surface.lua  text.lua
lua/: CMakeLists.txt  lauxlib.c  linit.c  lmathlib.c  loadlib.c  lstate.c  ltablib.c  luaconf.h  lvm.c
lua-bindings/: input.cpp  palette.cpp  pen.cpp  point.cpp  rect.cpp  screen.cpp  size.cpp  sprites.cpp  surface.cpp  timer.cpp  vec2.cpp  vec3.cpp
lua/wrap/: stdio.cpp  stdio.h
